# TelemetreBergman

./: .gitattributes  .gitignore  LISEZMOI.md  README.md  cadreur.example.toml  config.example.toml  pyproject.toml  requirements.txt
documentation/: PRD-cadreur.md
scripts/: analyze_points.py  deploy.sh  detect_serial.py  drive_demo.py  install.sh  make_app.sh  millumin_sim.py  net_sniff.py  osc_test.py  setup_mac.sh  sim_telemetre.py
shows/: example-show.json
src/cadreur/: __init__.py  __main__.py  app.py  config.py  engine.py  gui.py  interp.py  millumin.py  show.py  smoothing.py  state.py  telemetre_client.py
src/cadreur/web/: app.js  index.html  style.css
src/telemetre/: __init__.py  __main__.py  app.py  config.py  filters.py  frames.py  osc_out.py  serial_reader.py  state.py
systemd/: telemetre.service
tests/: test_config.py  test_engine.py  test_filters.py  test_frames.py  test_interp.py  test_show.py  test_smoothing.py
web/: app.js  index.html  style.css
