[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetre-bergman"
version = "0.1.0"
description = "TF02-Pro LiDAR cart-position server for the Bergman stage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyserial>=3.5",
    "python-osc>=1.8",
]

[project.scripts]
telemetre = "telemetre.__main__:main"
cadreur = "cadreur.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cadreur = ["web/*"]
